k8/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-app
  namespace: production
  labels:
    app: fsl-app
spec:
  serviceName: "fsl-app-service"
  replicas: 3
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
      - name: fsl-app
        image: fsl-challenge:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          name: web
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
