k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-app-service
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
    name: web
  selector:
    app: fsl-app
  type: ClusterIP
